welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:3: error: not found: value trouveChemin
	trouveChemin()
        ^SlugTracking:12: error: type mismatch;
 found   : Unit
 required: Boolean
    if (getCouleurSol()==Color.green){
    ^SlugTracking:2: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime1.SlugTracking'
override def run(){
             ^